Fixed Alignment, added text shadow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     position:page;
     top:60px;
     color:#00FF00;
+    text-align: center;
+    text-shadow: 0px 2px 6px #333;
 }
 
 #container {
